# synapsis

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  SPECS.md  TODOWrite.md  deny.toml  docker-compose.yml  install-macos.sh  install.ps1  install.sh  rust-toolchain.toml  start-secure-server.sh  uninstall-macos.sh  uninstall.ps1  uninstall.sh  verify_synapsis.sh
.cargo/: audit.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: autoformat.yml  ci.yml  gitleaks.yml  labeler.yml  lock.yml  osv-scanner.yml  pr-review.yml  release-drafter.yml  release-please.yml  release.yml  stale.yml
assets/: architecture.drawio
benches/: kyber_benchmarks.rs
docker/grafana/provisioning/: datasources.yml
docker/prometheus/: prometheus.yml
docs/: AGENT_COORDINATION_LOG.md  AUTH_BROWSER.md  CLI_GUIDE.md  DEEPSEEK_FEEDBACK_ADDRESSED.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  KYBER_REAL_PROOF.md  PRODUCTION_READINESS.md  PROJECT_STATUS.md  RESPONSE_TO_CRITICISMS.md  RESPONSE_TO_DEEPSEEK.md  ROADMAP.md  SECURITY.md  SECURITY_100_100.md  SECURITY_AUDIT_REPORT.md  SESSION_CONTINUITY_20260324.md  SESSION_LOG_20260324.md  STRUCTURE.md  TECHNICAL_EVIDENCE_REPORT.md
docs/github/: CONTRIBUTING.md
docs/internal/: INTER_AGENT_COMMUNICATION.md
examples/: plugin_usage.rs.disabled
plugins/vscode/: mcp-settings.json  windsurf-mcp.json
scripts/: install-ios.sh  install-linux.sh  install-macos.sh  install-termux.sh  install.ps1  install.sh  lint.sh  synapsis-mcp-bridge.sh  update-action.sh
src/: config.rs  lib.rs  main.rs  session_cleanup.rs
src/api/: mod.rs  rest.rs
src/app_core/: anti_tampering.rs  audit_logger.rs  dilithium_signature.rs  mod.rs  resilience.rs  resources.rs  self_healing.rs  updater.rs
src/application/: mod.rs
src/application/agent/: heartbeat.rs  mod.rs  register.rs
src/application/memory/: mod.rs  recall.rs  save.rs  search.rs
src/application/task/: complete.rs  create.rs  mod.rs
src/cli/: mod.rs  session.rs
src/core/: agent.rs  agent_registry_ext.rs  antibrick.rs  audit_log.rs  auto_integrate.rs  chunk_query.rs  concurrency.rs  concurrency_advanced.rs  discovery.rs  discovery_net.rs  lock_utils.rs  mod.rs  orchestrator.rs  passive_capture.rs  pqc.rs  rate_limiter.rs  resource_manager.rs  retry.rs  security.rs  session_id.rs  session_manager.rs  sync.rs  task_cleanup.rs  task_queue.rs  terminal_writer.rs  timeline_manager.rs  tool_registry.rs  uuid.rs  vault.rs  watchdog.rs  worker.rs
src/core/auth/: challenge.rs  classifier.rs  mod.rs  permissions.rs  tpm.rs
src/core/orchestrator/: agent.rs  communication.rs  legacy.rs  mod.rs  task.rs  types.rs
src/core/providers/: mod.rs  ollama.rs
src/core/recycle/: bin.rs  categorizer.rs  mod.rs
src/core/task_queue/: mod.rs  types.rs
src/core/worker/: cleanup.rs  code.rs  connectors.rs  file.rs  git.rs  mod.rs  search.rs  shell.rs
src/domain/: entities.rs  errors.rs  mod.rs  ports.rs  provider.rs  types.rs  uuid.rs
src/domain/models/: agent.rs  memory.rs  task.rs
src/domain/ports/: agent_port.rs  memory_port.rs  mod.rs  storage_port.rs
src/infrastructure/: agents.rs  event_bus.rs  mod.rs  shared_state.rs  skills.rs  yolo_daemon.rs
src/infrastructure/cache/: memory_cache.rs
src/infrastructure/context/: cold_storage.rs  context_compression.rs  context_types.rs  global_context.rs  hot_recycler.rs  mod.rs  orchestration.rs  prompting_assistant.rs  registry.rs  relevance.rs  types.rs
src/infrastructure/database/: migrations.rs  mod.rs  multi_agent.rs  sqlite.rs
src/plugins/: mod.rs
src/plugins/feasibility_analyzer/: mcp_tools.rs  mod.rs
src/plugins/kufale_engine/: mod.rs
src/plugins/remote_control/: mod.rs
src/plugins/security_shield/: mod.rs
src/plugins/smart_browser/: mod.rs
src/presentation/: cli.rs  http.rs  mod.rs  quic.rs  tui.rs
src/presentation/mcp/: handlers.rs  html.rs  mod.rs  resources.rs  secure_tcp.rs  server.rs  tcp.rs  tools.rs
src/tools/: auth_browser.rs  browser_navigation.rs  cve_search.rs  env_detection.rs  mod.rs  os_search.rs  security_classify.rs  web_research.rs
tests/: compression_tests.rs  context_tests.rs  context_tests.rs.disabled  dilithium_integration_tests.rs.disabled  mcp_integration_tests.rs  multi_agent_bridge_test.sh  orchestration_tests.rs.disabled  pqc_security_tests.rs  stress_tests.rs  stress_tests.rs.disabled  synapsis_agents_tests.rs  synapsis_database_tests.rs  synapsis_database_tests.rs.disabled  synapsis_fuzz_tests.rs  synapsis_pqc_integration.rs.disabled  synapsis_skills_tests.rs.disabled  yolo_integration_tests.rs
tests/synapsis/: database_tests.rs
